# ted

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
.github/: SECURITY.md
docs/: .gitignore  Gemfile  _config.yml  contributing.md  index.md
docs/_includes/: nav_footer_custom.html
docs/_includes/components/: aux_nav.html
docs/_plugins/: ted_highlighter.rb
include/: meta.hpp
scripts/: format
ted/: .gitignore  CMakeLists.txt  README.md
ted/include/: parser.y  tokens.l
ted/src/: main.cpp
tedify/: CMakeLists.txt  README.md
tedify/include/: tedify.hpp
tedify/src/: main.cpp
tedoc/: README.md
tests/: hello_world.ted  hello_world_untedified.ted
